# jogo-tec-prog

./: .gitignore  CMakeLists.txt  main.cpp
fases-template/: primeira-fase.txt  segunda-fase.txt
includes/: Ente.h  Game.h  IDs.h  Jogo.h  Menu.h
includes/dtos/: EntidadeDTO.h  InimigoDTO.h  ObstaculoDTO.h  PersonagemDTO.h  PontuacaoDTO.h
includes/entidades/: Entidade.h  Projetil.h
includes/entidades/obstaculos/: Bandeira.h  Espinho.h  Meleca.h  Obstaculo.h  Plataforma.h
includes/entidades/personagens/: Jogador.h  Personagem.h
includes/entidades/personagens/inimigos/: Chefao.h  Inimigo.h  Terrestre.h  Voador.h
includes/entities/: Entity.h
includes/entities/characters/: Character.h  Player.h
includes/entities/characters/enemies/: Enemy.h  Flying.h  Land.h
includes/entities/obstacles/: Obstacle.h
includes/estados/: Estado.h  EstadoJogo.h  EstadoMenu.h
includes/fases/: Fase.h  PrimeiraFase.h  Prologue.h  SegundaFase.h
includes/gerenciadores/: GerenciadorColisao.h  GerenciadorEstado.h  GerenciadorGrafico.h
includes/listas/: Lista.h  ListaEntidades.h
includes/managers/: Collision.h  GraphicManager.h
includes/menus/: Botao.h  CaixaTexto.h  Menu.h  MenuJogadores.h  MenuPausa.h  MenuPontuacao.h  MenuPrincipal.h  MenuRanking.h
includes/observer-pattern/: Observer.h  Subject.h
includes/observer-pattern/input/: InputSubject.h  JogadorObserver.h
salvamentos/: pontuacoes.txt  salvamento.txt
src/: Ente.cpp  Game.cpp  Jogo.cpp  Menu.cpp
src/entidades/: Entidade.cpp  Projetil.cpp
src/entidades/obstaculos/: Bandeira.cpp  Espinho.cpp  Meleca.cpp  Obstaculo.cpp  Plataforma.cpp
src/entidades/personagens/: Jogador.cpp  Personagem.cpp
src/entidades/personagens/inimigos/: Chefao.cpp  Inimigo.cpp  Terrestre.cpp  Voador.cpp
src/entities/: Entity.cpp
src/entities/characters/: Character.cpp  Player.cpp
src/entities/characters/enemies/: Enemy.cpp  Flying.cpp  Land.cpp
src/entities/obstacles/: Obstacle.cpp
src/estados/: Estado.cpp  EstadoJogo.cpp  EstadoMenu.cpp
src/fases/: Fase.cpp  PrimeiraFase.cpp  Prologue.cpp  SegundaFase.cpp
src/gerenciadores/: GerenciadorColisao.cpp  GerenciadorEstado.cpp  GerenciadorGrafico.cpp
src/listas/: Lista.cpp  ListaEntidades.cpp
src/managers/: Collision.cpp  GraphicManager.cpp
src/menus/: Botao.cpp  CaixaTexto.cpp  Menu.cpp  MenuJogadores.cpp  MenuPausa.cpp  MenuPontuacao.cpp  MenuPrincipal.cpp  MenuRanking.cpp
src/observer-pattern/input/: InputSubject.cpp  JogadorObserver.cpp
